styling fixes to: assessment field spacing, MUI component border color/font

--- a/src/Components/Milestones/Assessment.css
+++ b/src/Components/Milestones/Assessment.css
@@ -14,8 +14,6 @@
 }
 
 .content {
-    font-family: 'Liesel';
-    font-size: 32px;
     color: rgba(72, 70, 73, 1);
     font-weight: 400;
     text-align: center;
